src/test/ui/feature-gates/feature-gate-asm_sym.stderr
error[E0658]: sym operands for inline assembly are unstable
  --> $DIR/feature-gate-asm_sym.rs:7:29
   |
LL |         asm!("mov eax, {}", sym main);
   |                             ^^^^^^^^
   |
   = note: see issue #72016 <https://github.com/rust-lang/rust/issues/72016> for more information
   = help: add `#![feature(asm_sym)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
